cfts/subscriberVpcCft.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Create 2 layered VPC",
  "Parameters": {
    "vpcCidrRange": {
      "Description": "Give the VPC CIDR range to create VPC",
      "Type": "String",
      "Default": "10.10.0.0/17"
    },
    "subnetCidrRange1": {
      "Description": "Give the CIDR range to create subnet",
      "Type": "String",
      "Default": "10.10.1.0/24"
    },
    "subnetCidrRange2": {
      "Description": "Give the CIDR range to create subnet",
      "Type": "String",
      "Default": "10.10.2.0/24"
    },
    "subnetCidrRange3": {
      "Description": "Give the CIDR range to create subnet",
      "Type": "String",
      "Default": "10.10.3.0/24"
    },
    "subnetCidrRange4": {
      "Description": "Give the CIDR range to create subnet",
      "Type": "String",
      "Default": "10.10.4.0/24"
    },
    "AvailabilityZone1": {
      "Description": "Select AvailabilityZone 1",
      "Type": "AWS::EC2::AvailabilityZone::Name",
      "Default": "us-east-1a"
    },
    "AvailabilityZone2": {
      "Description": "Select AvailabilityZone 2",
      "Type": "AWS::EC2::AvailabilityZone::Name",
      "Default": "us-east-1b"
    },
    "NatInstanceType": {
      "Description": "Instance type to use for NAT",
      "Type": "String",
      "Default": "t2.micro"
    },
    "sshKey": {
      "Description": "SSH key to associate with PA Server",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "trustedSource": {
      "Description": "Trusted source to allow access to PA MGMT interface",
      "Type": "String",
      "Default": "1.1.1.1/32"
    }
  },
  "Mappings": {
    "AWSNATAMI": {
      "us-east-1": {
        "AMI": "ami-b419e7ce"
      },
      "us-west-2": {
        "AMI": "ami-0b707a72"
      },
      "us-east-2": {
        "AMI": "ami-021e3167"
      },
      "us-west-1": {
        "AMI": "ami-004b0f60"
      },
      "ca-central-1": {
        "AMI": "ami-12d36a76"
      },
      "eu-west-1": {
        "AMI": "ami-076d5d61"
      },
      "eu-west-2": {
        "AMI": "ami-0a4c5a6e"
      },
      "eu-central-1": {
        "AMI": "ami-0469bb6b"
      },
      "ap-southeast-1": {
        "AMI": "ami-047a3667"
      },
      "ap-southeast-2": {
        "AMI": "ami-17809174"
      },
      "ap-northeast-1": {
        "AMI": "ami-10dfc877"
      },
      "ap-northeast-2": {
        "AMI": "ami-1a1bc474"
      },
      "ap-south-1": {
        "AMI": "ami-6dc38202"
      },
      "sa-east-1": {
        "AMI": "ami-54e59738"
      }
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "vpcCidrRange"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Subscribe-vpc"
          },
          {
            "Key": "subscribingVpc",
            "Value": "YES"
          }
        ]
      }
    },
    "nataz1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "subnetCidrRange1"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NatAZ1"
          }
        ]
      }
    },
    "nataz2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "subnetCidrRange2"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone2"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NatAZ2"
          }
        ]
      }
    },
    "appz1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "subnetCidrRange3"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "AppAZ1"
          }
        ]
      }
    },
    "appz2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "subnetCidrRange4"
        },
        "AvailabilityZone": {
          "Ref": "AvailabilityZone2"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "AppAZ2"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Subscribe-vpc-igw"
          }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "NatRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Subscribing-nat-rt"
          }
        ]
      }
    },
    "NatRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "RouteTableId": {
          "Ref": "NatRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "SubnetRouteTableAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "nataz1"
        },
        "RouteTableId": {
          "Ref": "NatRouteTable"
        }
      }
    },
    "SubnetRouteTableAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "nataz2"
        },
        "RouteTableId": {
          "Ref": "NatRouteTable"
        }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Subscribing-priv-rt"
          }
        ]
      }
    },
    "SubnetRouteTableAssociation3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "appz1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "SubnetRouteTableAssociation4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "appz2"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "natSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH access",
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "natSecurityGroup"
          }
        ],
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "trustedSource"
            }
          }
        ]
      }
    },
    "natInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "AWSNATAMI",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "InstanceType": {
          "Ref": "NatInstanceType"
        },
        "KeyName": {
          "Ref": "sshKey"
        },
        "SourceDestCheck": "false",
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "SubnetId": {
              "Ref": "nataz1"
            },
            "GroupSet": [
              {
                "Ref": "natSecurityGroup"
              }
            ]
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "SubscribeVpcNatInstance"
          }
        ]
      }
    }
  },
  "Outputs": {
    "VPC": {
      "Description": "ID for Subscribe VPC",
      "Value": {
        "Ref": "VPC"
      }
    }
  }
}
